ui-super-heroes/deploy/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ui-super-heroes
  labels:
    app: ui-super-heroes
spec:
  to:
    kind: Service
    name: ui-super-heroes
    weight: 100
  port:
    targetPort: 8080-tcp
